--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,7 +31,7 @@
             <label for="exampleInputPassword1">tell me what you want to tell me for...</label>
             <textarea class="form-control" id="desc" rows="3" name="desc"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit here</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 
